# blue-on-blue

./: .editorconfig  .gitignore  ContainerFile  Containerfile  README.md  bot.py  config_example.json  install.bat  pyproject.toml  requirements-tests.txt  requirements.txt  settings.py  start.bat  start.py
.github/workflows/: build_container.yaml  build_containers.yaml  containers.yaml  deploy_containers.yaml  deploy_dev.yaml  deploy_release.yaml  lint.yaml  test.yaml  type-checking.yaml
blueonblue/: __init__.py  __main__.py  bot.py  checks.py  config.py  db.py  dbtables.py  defines.py  events.py  log.py  views.py
blueonblue/dbtables/: __init__.py  pings.py  raffle.py
blueonblue/lib/: __init__.py  steam.py
cogs/: BotControl.py  ChatFilter.py  Events.py  Fun.py  Gold.py  Missions.py  Pings.py  Punish.py  Users.py  Verify.py  Web.py  arma_stats.py  botcontrol.py  chatfilter.py  config.py  gold.py  jail.py  missions.py  pings.py  raffle.py  users.py  utils.py  verify.py
config/: config_default.toml
db/: README.md
scripts/: backup.sh  container.sh
src/blueonblue/: __init__.py  __main__.py  bot.py  checks.py  config.py  db.py  defines.py  log.py
src/blueonblue/dbtables/: __init__.py  base.py  pings.py  raffle.py
src/blueonblue/lib/: steam.py
src/blueonblue/sql/: database.json  v1_initial.sql
src/cogs/: arma_stats.py  botcontrol.py  config.py  gold.py  info.py  jail.py  missions.py  pings.py  raffle.py  users.py  utils.py  verify.py
temp/: README.md
tests/: conftest.py  test_db.py  test_missions.py  test_pings.py  test_raffle.py
