[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.3"
authors = [{ name = "Superxpdude" }]
name = "blueonblue"
description = "Discord Bot for TMTM"
requires-python = ">=3.13"

dependencies = [
	"discord.py>=2.5.2",
	"asqlite>=2.0.0",
	"aiohttp>=3.11.17",
	"parsedatetime>=2.6",
	"pbokit>=0.2.0",
	"tzdata>=2025.2",
]

[project.urls]
Repository = "https://github.com/Superxpdude/blue-on-blue"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"blueonblue.images" = ["*.png"]
"blueonblue.sql" = ["*.sql", "database.json"]

[tool.ruff]
line-length = 125

[tool.ruff.format]
indent-style = "tab"
